--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "NjUyODE3ODIzNTA0MjY5MzQy.GWkFZl.OZ2h0M5nZCh4f-ikKyNMYntcy5yGusdrr8J5h0",    
+    "token": "MTAyOTQ3ODI4MjEyODgwNTg5OQ.GeV7IJ.SPiP-8ZTSk1PpNMse_b2IfJawnaZ0L1N3rojBc",    
     "prefix": "*",    
     "user": "652817823504269342",
     "developer": ".Wiper⁰²⁰³#0470 || ! JustStrale#2203",
