--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "token": "MTAyOTQ3ODI4MjEyODgwNTg5OQ.GeV7IJ.SPiP-8ZTSk1PpNMse_b2IfJawnaZ0L1N3rojBc",    
+    "token": "MTAyOTQ3ODI4MjEyODgwNTg5OQ.GGJfno.EZgVmIM7z0gpwaw9boquIRJ-4ocqZR3wxfpj3I",    
     "prefix": "*",    
     "user": "652817823504269342",
     "developer": ".Wiper⁰²⁰³#0470 || ! JustStrale#2203",
